test/errhandling/lydia/notAnErrorSubtype-thrown.good
notAnErrorSubtype-thrown.chpl:5: In function 'main':
notAnErrorSubtype-thrown.chpl:7: error: Cannot throw an instance of type 'Foo', not a subtype of Error
